--- a/src/app/modules/main/main-cabinet/main-cabinet.component.html
+++ b/src/app/modules/main/main-cabinet/main-cabinet.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
-<p>main-cabinet works!</p>
-<router-outlet></router-outlet>
+<main class="main-content">
+    <router-outlet></router-outlet>
+</main>
 <app-footer></app-footer>
