--- a/src/app/modules/main/main-cabinet/main-cabinet.component.html
+++ b/src/app/modules/main/main-cabinet/main-cabinet.component.html
@@ -1,5 +1,35 @@
-<app-navbar></app-navbar>
-<main class="main-content">
-    <router-outlet></router-outlet>
-</main>
-<app-footer></app-footer>
+<div>
+    <mat-toolbar color="primary">
+        <div fxShow="true" fxHide.gt-sm="true">
+            <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+        </div>
+
+        <a mat-button class="companyName" routerLink="/">
+            <span>Site name</span>
+        </a>
+        <span class="example-spacer"></span>
+        <div fxShow="true" fxHide.lt-md="true">
+            <a mat-button [routerLink]="'/'"> Home </a>
+            <a mat-button [routerLink]="'/map'"> Map </a>
+            <a mat-button [routerLink]="'/burial'"> Burials </a>
+            <a mat-button [routerLink]="'/about'"> About As </a>
+        </div>
+
+    </mat-toolbar>
+    <mat-sidenav-container fxFlexFill class="example-container">
+
+        <mat-sidenav color="primary" #sidenav fxLayout="column" mode="over" opened="false" fxHide.gt-sm="true">
+            <div fxLayout="column">
+                <a mat-button [routerLink]="'/'"> Home </a>
+                <a mat-button [routerLink]="'/map'"> Map </a>
+                <a mat-button [routerLink]="'/burial'"> Burials </a>
+                <a mat-button [routerLink]="'/about'"> About As </a>
+            </div>
+        </mat-sidenav>
+        <mat-sidenav-content fxFlexFill>
+            <router-outlet></router-outlet>
+        </mat-sidenav-content>
+    </mat-sidenav-container>
+</div>
