--- a/src/app/modules/main/components/navbar/navbar.component.html
+++ b/src/app/modules/main/components/navbar/navbar.component.html
@@ -1,36 +1,35 @@
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
-        <button mat-icon-button>
-          <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
-        </button>
-        <h1>SimpleCRM</h1>
-        <span class="menu-spacer"></span>
-        <div>
-
-          <a mat-button [routerLink]="'/'"> Home </a>
-          <a mat-button [routerLink]="'/map'"> Map </a>
-          <a mat-button [routerLink]="'/burial'"> Burials </a>
-          <a mat-button [routerLink]="'/about'"> About As </a>
-    
+<div>
+    <mat-toolbar color="primary">
+        <div fxShow="true" fxHide.gt-sm="true">
+            <button mat-icon-button (click)="sidenav.toggle()">
+        <mat-icon>menu</mat-icon>
+      </button>
         </div>
-    </mat-toolbar-row>
-</mat-toolbar>
 
-<mat-sidenav-container>
-    <mat-sidenav #sidenav>
-      <mat-nav-list>
-  
-        <a mat-button [routerLink]="'/'"> Home </a>
-        <a mat-button [routerLink]="'/map'"> Map </a>
-        <a mat-button [routerLink]="'/burial'"> Burials </a>
-        <a mat-button [routerLink]="'/about'"> About As </a>
-  
-      </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content>
-      <div style="height: 88vh;">
-  
-        
-      </div>
-    </mat-sidenav-content>
-</mat-sidenav-container>
+        <a mat-button class="companyName" routerLink="/">
+            <span>Site name</span>
+        </a>
+        <span class="example-spacer"></span>
+        <div fxShow="true" fxHide.lt-md="true">
+            <a mat-button [routerLink]="'/'"> Home </a>
+            <a mat-button [routerLink]="'/map'"> Map </a>
+            <a mat-button [routerLink]="'/burial'"> Burials </a>
+            <a mat-button [routerLink]="'/about'"> About As </a>
+        </div>
+
+    </mat-toolbar>
+    <mat-sidenav-container fxFlexFill class="example-container">
+
+        <mat-sidenav color="primary" #sidenav fxLayout="column" mode="over" opened="false" fxHide.gt-sm="true">
+            <div fxLayout="column">
+                <a mat-button [routerLink]="'/'"> Home </a>
+                <a mat-button [routerLink]="'/map'"> Map </a>
+                <a mat-button [routerLink]="'/burial'"> Burials </a>
+                <a mat-button [routerLink]="'/about'"> About As </a>
+            </div>
+        </mat-sidenav>
+        <mat-sidenav-content fxFlexFill>
+            Awesome content
+        </mat-sidenav-content>
+    </mat-sidenav-container>
+</div>
